--- a/html/mypage/mypage.html
+++ b/html/mypage/mypage.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mypage</title>
+    <title>MyPage</title>
     <link rel="stylesheet" href="../../css/common/reset.css" />
     <link rel="stylesheet" href="../../css/mypage/mypage.css" />
-    <link rel="stylesheet" href="../../css/main/main.css" />
-
+  
+    <script defer src="../../js/mypage/mypage.js"></script>
+    <script defer src="../../js/main/main.js"></script>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
@@ -16,9 +17,6 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-
-    <script defer src="../../js/main/main.js"></script>
-    <script defer src="../../js/mypage/mypage.js"></script>
   </head>
   <body>
     <div id="header-placeholder"></div>
