--- a/html/weddingHall/mapViewWithFilters.html
+++ b/html/weddingHall/mapViewWithFilters.html
@@ -116,145 +116,146 @@
                 </div>
             </section>
 
-            <section class="carousel-container hd__inner1100">
-                <button class="carousel-button left" id="prevButton">
+            <!-- 키워드 검색 결과 : 슬라이드 -->
+            <section class="slide">
+                <button class="slide-button left" id="prevButton">
                     <img
                         src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/arrow/left-arrow.png"
                     />
                 </button>
-                <div class="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item">
-                            <div class="carousel-item-title">
+                <div class="slide-container">
+                    <div class="slide-inner">
+                        <div class="slide-item">
+                            <div class="slide-item-title">
                                 <p>도심속 자연과 어우러진 하우스웨딩</p>
                                 <h2>자연 채광 아래 여유롭고 프라이빗한 예식</h2>
                             </div>
-                            <div class="carousel-item-img">
+                            <div class="slide-item-img">
                                 <img
                                     src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall1.jpg"
                                     alt="웨딩홀 이미지 5"
                                 />
                             </div>
-                            <div class="carousel-item-content">
+                            <div class="slide-item-content">
                                 <h3>추천포인트</h3>
                                 <p>✔️ 따뜻한 분위기 살라</p>
                                 <p>✔️ 따뜻한 분위기 살라</p>
                             </div>
                         </div>
-                        <div class="carousel-item">
-                            <div class="carousel-item-title">
+                        <div class="slide-item">
+                            <div class="slide-item-title">
                                 <p>도심속 자연과 어우러진 하우스웨딩</p>
                                 <h2>자연 채광 아래 여유롭고 프라이빗한 예식</h2>
                             </div>
-                            <div class="carousel-item-img">
+                            <div class="slide-item-img">
                                 <img
                                     src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall2.jpg"
                                     alt="웨딩홀 이미지 5"
                                 />
                             </div>
-                            <div class="carousel-item-content">
+                            <div class="slide-item-content">
                                 <h3>추천포인트</h3>
                                 <p>✔️ 따뜻한 분위기 살라</p>
                                 <p>✔️ 따뜻한 분위기 살라</p>
                             </div>
                         </div>
-                        <div class="carousel-item">
-                            <div class="carousel-item-title">
+                        <div class="slide-item">
+                            <div class="slide-item-title">
                                 <p>도심속 자연과 어우러진 하우스웨딩</p>
                                 <h2>자연 채광 아래 여유롭고 프라이빗한 예식</h2>
                             </div>
-                            <div class="carousel-item-img">
+                            <div class="slide-item-img">
                                 <img
                                     src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall3.jpg"
                                     alt="웨딩홀 이미지 5"
                                 />
                             </div>
-                            <div class="carousel-item-content">
+                            <div class="slide-item-content">
                                 <h3>추천포인트</h3>
                                 <p>✔️ 따뜻한 분위기 살라</p>
                                 <p>✔️ 따뜻한 분위기 살라</p>
                             </div>
                         </div>
-                        <div class="carousel-item">
-                            <div class="carousel-item-title">
+                        <div class="slide-item">
+                            <div class="slide-item-title">
                                 <p>도심속 자연과 어우러진 하우스웨딩</p>
                                 <h2>자연 채광 아래 여유롭고 프라이빗한 예식</h2>
                             </div>
-                            <div class="carousel-item-img">
+                            <div class="slide-item-img">
                                 <img
                                     src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall4.jpg"
                                     alt="웨딩홀 이미지 5"
                                 />
                             </div>
-                            <div class="carousel-item-content">
+                            <div class="slide-item-content">
                                 <h3>추천포인트</h3>
                                 <p>✔️ 따뜻한 분위기 살라</p>
                                 <p>✔️ 따뜻한 분위기 살라</p>
                             </div>
                         </div>
-                        <div class="carousel-item">
-                            <div class="carousel-item-title">
+                        <div class="slide-item">
+                            <div class="slide-item-title">
                                 <p>도심속 자연과 어우러진 하우스웨딩</p>
                                 <h2>자연 채광 아래 여유롭고 프라이빗한 예식</h2>
                             </div>
-                            <div class="carousel-item-img">
+                            <div class="slide-item-img">
                                 <img
                                     src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall1.jpg"
                                     alt="웨딩홀 이미지 5"
                                 />
                             </div>
-                            <div class="carousel-item-content">
+                            <div class="slide-item-content">
                                 <h3>추천포인트</h3>
                                 <p>✔️ 따뜻한 분위기 살라</p>
                                 <p>✔️ 따뜻한 분위기 살라</p>
                             </div>
                         </div>
-                        <div class="carousel-item">
-                            <div class="carousel-item-title">
+                        <div class="slide-item">
+                            <div class="slide-item-title">
                                 <p>도심속 자연과 어우러진 하우스웨딩</p>
                                 <h2>자연 채광 아래 여유롭고 프라이빗한 예식</h2>
                             </div>
-                            <div class="carousel-item-img">
+                            <div class="slide-item-img">
                                 <img
                                     src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall2.jpg"
                                     alt="웨딩홀 이미지 5"
                                 />
                             </div>
-                            <div class="carousel-item-content">
+                            <div class="slide-item-content">
                                 <h3>추천포인트</h3>
                                 <p>✔️ 따뜻한 분위기 살라</p>
                                 <p>✔️ 따뜻한 분위기 살라</p>
                             </div>
                         </div>
-                        <div class="carousel-item">
-                            <div class="carousel-item-title">
+                        <div class="slide-item">
+                            <div class="slide-item-title">
                                 <p>도심속 자연과 어우러진 하우스웨딩</p>
                                 <h2>자연 채광 아래 여유롭고 프라이빗한 예식</h2>
                             </div>
-                            <div class="carousel-item-img">
+                            <div class="slide-item-img">
                                 <img
                                     src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall3.jpg"
                                     alt="웨딩홀 이미지 5"
                                 />
                             </div>
-                            <div class="carousel-item-content">
+                            <div class="slide-item-content">
                                 <h3>추천포인트</h3>
                                 <p>✔️ 따뜻한 분위기 살라</p>
                                 <p>✔️ 따뜻한 분위기 살라</p>
                             </div>
                         </div>
-                        <div class="carousel-item">
-                            <div class="carousel-item-title">
+                        <div class="slide-item">
+                            <div class="slide-item-title">
                                 <p>도심속 자연과 어우러진 하우스웨딩</p>
                                 <h2>자연 채광 아래 여유롭고 프라이빗한 예식</h2>
                             </div>
-                            <div class="carousel-item-img">
+                            <div class="slide-item-img">
                                 <img
                                     src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall4.jpg"
                                     alt="웨딩홀 이미지 5"
                                 />
                             </div>
-                            <div class="carousel-item-content">
+                            <div class="slide-item-content">
                                 <h3>추천포인트</h3>
                                 <p>✔️ 따뜻한 분위기 살라</p>
                                 <p>✔️ 따뜻한 분위기 살라</p>
@@ -262,7 +263,7 @@
                         </div>
                     </div>
                 </div>
-                <button class="carousel-button right" id="nextButton">
+                <button class="slide-button right" id="nextButton">
                     <img
                         src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/arrow/right-arrow.png"
                     />
