--- a/html/weddingHall/weddingHallDetail.html
+++ b/html/weddingHall/weddingHallDetail.html
@@ -13,7 +13,90 @@
     </head>
     <body>
         <div id="header-placeholder"></div>
-        <div class="hd__inner1100"></div>
+        <div class="hd__inner1100">
+            <!-- 1. 업체 설명 + 이미지 슬라이드 -->
+            <section class=""></section>
+
+            <!-- 2. 업체 정보 + 지도-->
+            <section class="imforamtion">
+                <div class="title-container">
+                    <h2>Information</h2>
+                    <a href="#">후기 보러가기 >>></a>
+                </div>
+
+                <div class="info-container">
+                    <!-- 왼쪽 정보 -->
+                    <table class="info-table">
+                        <tr>
+                            <th>지역</th>
+                            <td>서울특별시 강남구</td>
+                        </tr>
+                        <tr>
+                            <th>연락처</th>
+                            <td>02-111-1111</td>
+                        </tr>
+                        <tr>
+                            <th>예식 형태</th>
+                            <td>동시예식</td>
+                        </tr>
+                        <tr>
+                            <th>예식 유형</th>
+                            <td>하우스예식</td>
+                        </tr>
+                        <tr>
+                            <th>식사비</th>
+                            <td>85,000</td>
+                        </tr>
+                        <tr>
+                            <th>보증인원</th>
+                            <td>180~300</td>
+                        </tr>
+                        <tr>
+                            <th>주차</th>
+                            <td>600대</td>
+                        </tr>
+                        <tr>
+                            <th>홈페이지</th>
+                            <td>www.villadegd.com</td>
+                        </tr>
+                    </table>
+                    <!-- 오른쪽 정보 -->
+                    <div>
+                        <table class="info-table">
+                            <tr>
+                                <th>주소</th>
+                                <td>서울 강남구 역삼로 607 </td>
+                            </tr>
+                            <tr>
+                                <th>대중교통 </th>
+                                <td>하철 2호선 삼성역 </td>
+                            </tr>
+                        </table>
+                        <div class="info-map">
+                            <img
+                                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/etc/map.png"
+                            />
+                        </div>
+                    </div>
+                </div>
+                <div class="buttons">
+                    <button class="like-btn">찜하기</button>
+                    <button class="list-btn">목록</button>
+                </div>
+            </section>
+
+            <!-- 3. 예식일정 현황-->
+            <section class=""></section>
+
+            <!-- 4. 웨딩홀 견적 계산기-->
+            <section class=""></section>
+
+            <!-- 5. 비슷한 가격대 웨딩홀-->
+            <section class=""></section>
+
+            <!-- 6. 다른 고객이 함께 본 상품-->
+            <section class=""></section>
+        </div>
         <div id="footer-placeholder"></div>
     </body>
 </html>
